# qlp-multi

./: .env.api.example  .env.bedrock.example  .env.development  .env.docker  .env.example  .env.hap.production  .env.production  .env.railway.example  .gitignore  ACR_BUILD_STATUS.md  API_DOCUMENTATION_URLS.md  API_URL_FIX_SUMMARY.md  AWS_BEDROCK_CHECKLIST.md  AWS_BEDROCK_COMPLETE_TEST_RESULTS.md  AWS_BEDROCK_FIXES_SUMMARY.md  AWS_BEDROCK_TEST_RESULTS.md  AWS_BEDROCK_TEST_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CLEANUP_REPORT.md  CLOUD_HYBRID_STATUS.md  CLOUD_MIGRATION_STATUS.md  CLOUD_MIGRATION_SUMMARY.md  CLOUD_SERVICES_SETUP.md  CODEBASE_REVIEW_SUMMARY.md  COST_TRACKING_GUIDE.md  COST_TRACKING_IMPLEMENTATION.md  DOMAIN_UPDATE_CHECKLIST.md  Dockerfile  Dockerfile.base  ENVIRONMENT_VARIABLES_UPDATE.md  GITHUB_PUSH_FIX_SUMMARY.md  GITHUB_PUSH_PRODUCTION_FIX.md  Makefile  PRODUCTION_API_STATUS.md  PRODUCTION_READY_SUMMARY.md  PRODUCTION_SYSTEM_SUMMARY.md  README.md  api_v2_summary.py  apply_api_fixes.sh  (+188 more)
capsule_versions/: 1abfe288-e568-40dc-9d71-c2a8cc0fe72f_history.json  ac7a0307-4293-46f0-b0ad-d0a11c43ad34_history.json  af1d782f-9b36-4aa6-bf01-f529521764f9_history.json  edbf4a3b-6145-4e14-8b0b-bda7a7208164_history.json
config/: azure_openai_config.yaml
deployments/: MIGRATION_TO_AKS.md
qlp-cli/: .gitignore  .pypirc.template  CHANGELOG.md  MANIFEST.in  PUBLISHING.md  README.md  build_for_pypi.sh  debug_workflow.py  demo.md  install_dev.sh  pyproject.toml  run_cli.py  setup.py  test_all_features.py  test_chain_of_thought.py  test_cli.py  test_cli_simple.sh  test_progress_fix.py  test_simple_endpoint.py  test_status_endpoint.py
qlp-cli/qlp_cli/: __init__.py  api_client.py  chain_of_thought.py  config.py  interactive.py  live_progress.py  main.py  preview.py  utils.py
(+389 files in other folders)
